<resources>
    <string name="app_name">App</string>
    <string name="version_label">Version:</string>
    <string name="imei_label">IMEI:</string>
    <string name="to_app_settings">App settings</string>
    <string name="message_to_user_imei">Permission for IMEI</string>
    <string name="imei_dialog_title">Grant permission</string>
    <string name="imei_dialog_message">Permisson for IMEI</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hello_likes_fragment">Hello from likes fragment</string>
    <string name="hello_rss_fragment">Hello from rss fragment</string>
    <string name="hello_about_fragment">Hello from about fragment</string>
    <string name="hello_profile_fragment">Hello from profile fragment</string>
    <string name="hello_favorites_fragment">Hello from favorites fragment</string>
    <string name="hello_blank_fragment">Hello from blank fragment</string>
    <string name="first_name_hint">First Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="edit_save">Edit</string>
    <string name="get_data_btn">Settings</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="authorization">Authorization</string>
    <string name="font_family_roboto_regular">Roboto regular</string>
    <string name="about">about app</string>
    <string name="auth_email">Enter email</string>
    <string name="auth_password">Enter password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="loading_title">Загрузка</string>
    <string name="loading_message">Подождите немного</string>
</resources>
