<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:focusableInTouchMode="true">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.abdularis.civ.CircleImageView
                android:id="@+id/edit_image_view"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/default_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edit_image_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_image_view"
                app:layout_constraintTop_toBottomOf="@+id/edit_image_view"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/first_name_input"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/first_name_input"
                app:layout_constraintTop_toBottomOf="@+id/first_name_input"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/last_name_input"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/last_name_input"
                app:layout_constraintTop_toBottomOf="@+id/last_name_input"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/phone_input"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/phone_input"
                app:layout_constraintTop_toBottomOf="@+id/phone_input"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/save_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/edit_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/email_input"
                app:layout_constraintTop_toBottomOf="@+id/email_input"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>